jwt cant generate tables in mysql